--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form onsubmit= "showAlert(); return false;">
+		<label for = "firstName">First Name:</label>
+		<input type="text" id="firstName" name="First Name"><br><br>
+		
+		<label for = "lastName">Last Name:</label>
+		<input type ="text" id="lastName" name="Last Name"><br><br>
+		
+		<label for="phoneNumber">phone Number</label>
+		<input type="tel" id="phoneNumber" name= "Phone Number"><br><br>
+		
+		<label for ="emailId">Email ID:</label>
+		<input type="email" id="emailId" name="Email ID">
+		
+		<input type="submit" value="submit">
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
