--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="tel" id="phoneNumber" name= "Phone Number"><br><br>
 		
 		<label for ="emailId">Email ID:</label>
-		<input type="email" id="emailId" name="Email ID">
+		<input type="email" id="emailId" name="Email ID"><br>
 		
 		<input type="submit" value="submit">
 		
